# qostraDirectory

./: .env.example  .gitignore  main.py  pyproject.toml
.github/workflows/: deploy.yml
.project/: project_rules.md  project_structure.md
.project/api/: accounts.md  clients.md  vendors.md
apps/accounts/: apps.py  models.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/models/: user.py
apps/clients/: admin.py  apps.py  models.py  tests.py  urls.py
apps/clients/migrations/: 0001_initial.py  0002_initial.py
apps/clients/models/: client.py
apps/clients/serializers/: __init__.py  client_serializer.py
apps/clients/tests/: __init__.py  test_views.py
apps/clients/views/: __init__.py  client_views.py
apps/vendors/: apps.py
common/auth/: __init__.py  core.py  user_sync.py  utils.py
common/utils/: cache.py
config/: urls.py
config/settings/: base.py  dev.py  prod.py  test.py
