[project]
name = "qostradirectory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "django-ratelimit>=4.1.0",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "gunicorn>=26.0.0",
    "mysqlclient>=2.2.8",
    "psycopg[binary]>=3.3.4",
    "pyjwt>=2.13.0",
    "sentry-sdk>=2.63.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.3.0",
    "django-stubs>=6.0.5",
    "factory-boy>=3.3.3",
    "faker>=40.23.0",
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

